fix: fixed overflow properties

--- a/Open_Delivery/assets/css/main.css
+++ b/Open_Delivery/assets/css/main.css
@@ -31,7 +31,7 @@ body {
   grid-template-rows: auto;
   min-height: 100vh;
   min-width: 100vw;
-  overflow: none;
+  overflow: hidden;
 }
 
 .simpleButton {
