--- a/Open_Delivery/assets/css/registrazione.css
+++ b/Open_Delivery/assets/css/registrazione.css
@@ -27,6 +27,7 @@ body {
   background-image: url("../images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  overflow-y: scroll;
 }
 
 .container {
