--- a/Open_Delivery/assets/scss/common/components/_components-body.scss
+++ b/Open_Delivery/assets/scss/common/components/_components-body.scss
@@ -6,5 +6,5 @@ body{
     grid-template-rows: auto;
     min-height: 100vh;
     min-width: 100vw;
-    overflow: none;
+    overflow: hidden;
 }
