--- a/Open_Delivery/assets/scss/registrazione/components/_components-body.scss
+++ b/Open_Delivery/assets/scss/registrazione/components/_components-body.scss
@@ -2,4 +2,5 @@ body {
     background-image: url("../images/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-y: scroll;
 }
